--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/resources/css/style.css">
     <link rel="stylesheet" href="/resources/css/normalize.css">
+    <link rel="stylesheet" href="/github/workspace/docs/assets/css/style.scss">
     <script src="/resources//js/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 </head>
