--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
+
 <head>
     <title>{{title}}</title>
     <meta charset="UTF-8">
@@ -7,18 +8,17 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/resources/css/style.css">
     <link rel="stylesheet" href="/resources/css/normalize.css">
-    <link rel="stylesheet" href="/github/workspace/docs/assets/css/style.scss">
-    <script src="/resources//js/index.js"></script>
+    <script src="/resources/js/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 </head>
+
 <body>
 
     {{{body}}}
 
 </body>
+
 </html>
