--- a/views/body.hbs
+++ b/views/body.hbs
@@ -1,8 +1,8 @@
+<!DOCTYPE html>
 <html lang="en">
 
-
 <body>
-    <main class="wrap-main">
+        <main class="wrap-main">
         <div class="wrap-main__conteiner">
             <div class="wrap-main__conteiner__content">
                 <div class="wrap-main__conteiner__content__page">
@@ -32,5 +32,4 @@
         </div>
     </main>
 </body>
-
 </html>
